# rumipsem

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  notes.md  test.sh
mips_binaries/: busybox-mips.instructions  coredump  instruction.trace
mips_binaries/core_busybox-mips2_grep_passwd/: coredump
mips_binaries/core_busybox-mips2_noarg/: coredump
mips_binaries/core_busybox-mips2_wc_passwd/: coredump
mips_binaries/core_busybox-mips2_whoami/: coredump
mips_binaries/core_busybox-mips_clear/: coredump
mips_binaries/core_busybox-mips_dmesg/: coredump
mips_binaries/core_busybox-mips_pwd/: coredump
mips_binaries/core_busybox-mips_sh_-c_cwd/: coredump
mips_binaries/core_busybox-mips_whoami/: coredump
mips_binaries/core_wrtbinbusybox_id/: coredump
mips_documentation/: README.md
src/: args.rs  config.rs  cpu.rs  elf.rs  helpers.rs  instruction.rs  main.rs  memory.rs  mylog.rs  syscall_numbers.rs  syscalls.rs
src/cpu/: bitutils.rs  control.rs  event.rs  float.rs  instructions.rs  instructions_constants.rs  instructions_opcodes.rs  mod.rs  registers.rs  watchdog.rs
test_data/: README.md
tools/: README.md  gdb_trace.py  run_gdb.fish  run_gdb_emul.sh  type_size.c
